Fixed wrong font import

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Kanit";
-  src: url("/fonts/Kanit.woff") format("woff");
+  src: url("/fonts/Kanit-Regular.woff") format("woff");
+  font-weight: 400;
 }
 
 @font-face {
